# bindings-explorer

./: .gitignore  .gitmodules  astro.config.mjs  package-lock.json  package.json  starlight.config.ts
.github/workflows/: astro.yml
codegen/: codegen.ps1  main.py  pyproject.toml
src/assets/: customCSS.css
src/components/: ClassTable.astro  ClassTable.jsx
src/content/docs/: hello.mdx  index.mdx
src/pages/: [version].astro  index.astro  random-class.astro  stats.astro  version-select.astro
src/pages/[version]/: [class].astro  index.astro
src/pages/bindings/[version]/: [class].astro
