[project]
name = "bromalist"
version = "0.1.0"
description = ""
authors = [
    {name = "OmgRod",email = "89850217+OmgRod@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
